optimize gameplay hotspot paths